# zk-llm-gateway

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Dockerfile.gateway  README.md  STATUS.md  VALIDATE.md
client/: Cargo.toml
client/src/: agent.rs  api.rs  local_ai.rs  main.rs  manager.rs  memory_store.rs  prompt.rs  redaction.rs  session.rs  tickets.rs
common/: Cargo.toml
common/src/: envelope.rs  lib.rs  token.rs  types.rs  zk.rs
common/tests/: envelope_flow.rs
gateway/: Cargo.toml
gateway/src/: main.rs
relay/: Cargo.toml
relay/src/: main.rs
verifier_halo2/: Cargo.toml
verifier_halo2/src/: lib.rs
