[workspace]
resolver = "2"
members = [
  "common",
  "client",
  "gateway",
  "relay",
  "verifier_halo2",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["macros", "json"] }
base64 = "0.22"
bytes = "1.6"
clap = { version = "4.5", features = ["derive", "env"] }
env_logger = "0.11"
futures = "0.3"
hkdf = "0.12"
http = "1.1"
hyper = { version = "1", features = ["full"] }
log = "0.4"
rand = "0.8"
regex = "1.10"
once_cell = "1.19"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sled = "0.34"
thiserror = "1.0"
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "signal"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = { version = "0.10", features = ["std"] }
zeroize = { version = "1.8", features = ["derive"] }
