[package]
name = "zk_llm_client"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
futures.workspace = true
base64.workspace = true
chacha20poly1305.workspace = true
hkdf.workspace = true
sha2.workspace = true
regex.workspace = true
once_cell.workspace = true
zeroize.workspace = true

axum.workspace = true
tower-http.workspace = true

zk_llm_common = { path = "../common" }
