[package]
name = "zk_llm_common"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
bytes.workspace = true
chacha20poly1305.workspace = true
hkdf.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true
x25519-dalek.workspace = true
zeroize.workspace = true
