[package]
name = "zk_llm_gateway"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
# Enable real Halo2 verification support.
# This repo ships only a skeleton verifier (circuit-specific). You'll still need
# to implement proof verification for your circuit in `verifier_halo2`.
halo2 = ["zk_llm_verifier_halo2/halo2"]

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sled.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
uuid.workspace = true

zk_llm_common = { path = "../common" }
zk_llm_verifier_halo2 = { path = "../verifier_halo2" }
